# roto

./: .gitignore  .harper-dictionary.txt  .readthedocs.yaml  CONTRIBUTING.md  Cargo.toml  Changelog.md  Justfile  LICENSE  README.md  TESTING.md  clippy.toml  deny.toml  valgrind_suppressions.supp
.forgejo/workflows/: ci.yml
.github/: README.md
.github/workflows/: ci.yml
.helix/: languages.toml
docs/: Makefile  README.md  pyproject.toml  requirements.txt
docs/source/: conf.py  index.rst  requirements.txt
docs/source/_ext/: my_code.py  roto_domain.py
docs/source/embedding/: add_context.rst  build_a_runtime.rst  call_a_function.rst  expand_the_runtime.rst  generate_a_cli.rst  setup.rst
docs/source/overview/: goals.rst  hello_world.rst  installation.rst  why_roto.md  why_roto.rst
docs/source/reference/: command_line.rst  language_reference.md  language_reference.rst  rust_interoperability.rst  std.md  syntax_overview.rst
docs/source/reference/std/: index.md
docs/source/reference/std/Asn/: index.md
docs/source/reference/std/IpAddr/: index.md
docs/source/reference/std/List[T]/: index.md
docs/source/reference/std/Option[T]/: index.md
docs/source/reference/std/Prefix/: index.md
docs/source/reference/std/Result[T, E]/: index.md
docs/source/reference/std/String/: index.md
docs/source/reference/std/StringBuf/: index.md
docs/source/reference/std/StringBytes/: index.md
docs/source/reference/std/StringChars/: index.md
docs/source/reference/std/StringLines/: index.md
docs/source/reference/std/Verdict[A, R]/: index.md
docs/source/reference/std/bool/: index.md
docs/source/reference/std/char/: index.md
docs/source/reference/std/f32/: index.md
docs/source/reference/std/f64/: index.md
docs/source/reference/std/i16/: index.md
docs/source/reference/std/i32/: index.md
docs/source/reference/std/i64/: index.md
docs/source/reference/std/i8/: index.md
docs/source/reference/std/math/: index.md
docs/source/reference/std/u16/: index.md
docs/source/reference/std/u32/: index.md
docs/source/reference/std/u64/: index.md
docs/source/reference/std/u8/: index.md
docs/source/resources/css/: dark.css  light.css
docs/source/writing/: advanced.rst  basics.md  basics.rst  control_flow.md  control_flow.rst  data_types.md  data_types.rst  functions.md  functions.rst  introduction.md  modules.md  modules.rst  test.md
examples/: addr_range.roto  addr_range.rs  asn_in_out.rs  bla.rs  context.roto  context.rs  eval.rs  hello_world.roto  hello_world.rs  list.roto  list.rs  modules.rs  optional.roto  optional.rs  presentation.roto  presentation.rs  rib.roto  route.rs  runtime.roto  runtime.rs  simple.roto  simple.rs  string_interpolation.roto  string_interpolation.rs  types.rs
examples/modules/: foo.roto  lib.roto  pkg.roto
examples/type_errors/: duplicate_fields.roto  extra_data_field.roto  field_does_not_exist.roto  match_on_record.roto  mismatched_types.roto  missing_arguments.roto  missing_data_field.roto  missing_fields.roto  standalone_type.roto
macros/: Cargo.toml
macros/src/: lib.rs
roto_examples/: accept.roto  bmp_message.roto  if_else.roto  react_to_rx.roto  reject.roto  term.roto  variable.roto
roto_examples/parse_errors/: logical_chain.roto
roto_examples/type_errors/: accept_in_term.roto  apply_without_verdict.roto  duplicate_fields.roto  extra_data_field.roto  field_does_not_exist.roto  invalid_field_access.roto  match_on_record.roto  method_does_not_exist.roto  mismatched_types.roto  missing_arguments.roto  missing_data_field.roto  missing_fields.roto  no_such_static_method.roto  overriding_builtin.roto  record_literal_on_non_record.roto  return_in_define.roto  standalone_type.roto  term_returns_string.roto  type_not_found.roto  types_with_the_same_name.roto  undefined_variable.roto  unreachable_expression.roto
src/: ast.rs  attr_change_set.rs  blocks.rs  cli.rs  compile.rs  eval.rs  file_tree.rs  file_tree_tests.rs  ir_printer.rs  label.rs  lib.rs  macros.rs  main.rs  module.rs  parse_string.rs  parser.rs  pipeline.rs  proposal_types.rs  proposed_types.rs  symbols.rs  test.roto  token.rs  traits.rs  types.rs  vm.rs  walker.rs
src/codegen/: check.rs  mod.rs  testcase.rs  testing.rs  tests.rs
src/compiler/: compile.rs  compute_expr.rs  error.rs  mod.rs  recurse_compile.rs
src/hir/: ir.rs  lower.rs  mod.rs  print.rs
src/lir/: eval.rs  ir.rs  lower.rs  match_expr.rs  mod.rs  print.rs  test_eval.rs  value.rs
src/lower/: eval.rs  ir.rs  label.rs  match_expr.rs  mod.rs  test_eval.rs  value.rs  wrap.rs
src/lsp/: mod.rs
src/mir/: dead_code.rs  ir.rs  lower.rs  mod.rs  print.rs  ty.rs
src/parser/: error.rs  expr.rs  filter_map.rs  lexer.rs  meta.rs  mod.rs  precedence.rs  rib_like.rs  signature.rs  span.rs  test_expressions.rs  test_sections.rs  token.rs  value.rs
src/runtime/: basic.rs  context.rs  (+14 more)
supply-chain/: audits.toml  config.toml
tests/: accept_reject_simple.rs  bgp_filters.rs  bgp_update_message.rs  bmp_message.rs  compare.rs  data_sources.rs  docs.rs  doctests.json  end_to_end.rs  eq_conversions.rs  expressions.rs  filter_maps.rs  globals.rs  helpers.rs  lists.rs  mod.rs  modules.rs  my_message.rs  records.rs  routes.rs  sections.rs  snapshot.rs  string_conversions.rs  two_filters.rs  variables.rs
tree-sitter-roto/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
tree-sitter-roto/bindings/c/: tree-sitter-roto.pc.in
tree-sitter-roto/bindings/go/: binding.go  binding_test.go
tree-sitter-roto/bindings/node/: binding.cc  index.js
tree-sitter-roto/bindings/python/tests/: test_binding.py
tree-sitter-roto/bindings/python/tree_sitter_roto/: __init__.py  binding.c
tree-sitter-roto/bindings/rust/: build.rs  lib.rs
tree-sitter-roto/bindings/swift/TreeSitterRoto/: roto.h
tree-sitter-roto/bindings/swift/TreeSitterRotoTests/: TreeSitterRotoTests.swift
tree-sitter-roto/queries/: highlights.scm
tree-sitter-roto/src/: grammar.json  node-types.json  parser.c
vscode-extension/: vsc-extension-quickstart.md
(+128 files in other folders)
