[package]
name = "roto"
version.workspace = true 
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
ariadne = "0.5.0"
clap = { version = "4.4.6", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
logos = "0.14.0"
inetnum = "0.1.0"
symbol_table = { version = "0.3.0", features = ["global"] }
string-interner = "0.17.0"
roto-macros = { workspace = true, version = "0.3.0" }

[dependencies.cranelift]
version = "0.113.0"
features = ["frontend", "jit", "module", "native"]
git = "https://github.com/bytecodealliance/wasmtime.git"
rev = "1af294ea2d6c18c5a8fa9b4f272398b7c98e0c48"

[dependencies.cranelift-codegen]
version = "0.113.0"
features = ["disas"]
git = "https://github.com/bytecodealliance/wasmtime.git"
rev = "1af294ea2d6c18c5a8fa9b4f272398b7c98e0c48"

[dev-dependencies]
bytes = "1"
routecore = { version = "0.5", features = ["bgp", "bmp", "serde"] }

[profile.profiling]
inherits = "release"
lto = true
strip = "none"
debug = "full"

[workspace]
members = ["macros"]

[workspace.package]
version = "0.3.0"
edition = "2021"
authors = ["NLnet Labs <routing-team@nlnetlabs.nl>"]
license = "BSD-3-Clause"
rust-version = "1.80"
description = "strongly-typed, compiled language for Rotonda"
documentation = "https://docs.rs/roto/"
repository = "https://github.com/NLnetLabs/roto/"
homepage = "https://www.nlnetlabs.nl/projects/routing/rotonda/"
keywords = ["routing", "bgp"]
categories = ["network-programming"]
readme = "README.md"

[workspace.dependencies]
roto-macros = { path = "macros" }
proc-macro2 = "1.0.86"
quote = "1.0.37"
syn = { version = "2.0.77", features = ["full"] }
