[package]
name = "roto"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
ariadne = "0.5.0"
clap = { version = "4.4.6", features = ["derive"] }
env_logger = "0.11"
icu = { version = "1.5.0", features = ["compiled_data"] }
inetnum = "0.1.0"
log = "0.4"
roto-macros = { workspace = true }
symbol_table = { version = "0.4.0", features = ["global"] }

[dependencies.cranelift]
version = "0.120.0"
features = ["frontend", "jit", "module", "native"]

[dependencies.cranelift-codegen]
version = "0.120.0"
features = ["disas"]

[dev-dependencies]
bytes = "1"
routecore = { version = "0.5", features = ["bgp", "bmp", "serde"] }
tabled = { version = "0.18.0", default-features = false, features = ["std"] }

[profile.profiling]
inherits = "release"
lto = true
strip = "none"
debug = "full"

[workspace]
members = ["macros"]

[workspace.package]
version = "0.5.0"
edition = "2021"
authors = ["NLnet Labs <routing-team@nlnetlabs.nl>"]
license = "BSD-3-Clause"
rust-version = "1.84"
description = "strongly-typed, compiled language for Rotonda"
documentation = "https://docs.rs/roto/"
repository = "https://github.com/NLnetLabs/roto/"
homepage = "https://www.nlnetlabs.nl/projects/routing/rotonda/"
keywords = ["routing", "bgp"]
categories = ["network-programming"]
readme = "README.md"

[workspace.dependencies]
roto-macros = { path = "macros", version = "0.5.0" }
proc-macro2 = "1.0.86"
quote = "1.0.37"
syn = { version = "2.0.77", features = ["full"] }
