[project]
name = "manual"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "myst-parser>=4.0.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-notfound-page>=1.0.4",
    "sphinx-rtd-theme>=3.0.1",
    "sphinx-substitution-extensions>=2024.10.17",
    "sphinx-tabs>=3.4.7",
    "sphinx>=8.1.3",
]
