[package]
name = "roto-macros"
version.workspace = true 
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0.101", features = ["span-locations"] }
quote = "1.0.37"
syn = { version = "2.0.77", features = ["full"] }
